Added folders for paths

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -2,8 +2,18 @@
   "robotWidth": 0.9,
   "robotLength": 0.9,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
+  "pathFolders": [
+    "BotStart",
+    "MidStart",
+    "BotCycle",
+    "TopCycle",
+    "TopStart"
+  ],
+  "autoFolders": [
+    "TopStartAutos",
+    "MidStartAutos",
+    "BotStartAutos"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 360.0,
