Updated top or right paths for cycling

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,10 +3,10 @@
   "robotLength": 0.9,
   "holonomicMode": true,
   "pathFolders": [
+    "BotCycle",
     "BotStart",
     "MidStart",
-    "BotCycle",
-    "TopCycle",
+    "RightCycle",
     "TopStart"
   ],
   "autoFolders": [
