Auto starting net

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -7,7 +7,7 @@
     "BotStart",
     "MidStart",
     "RightCycle",
-    "TopStart"
+    "RightStart"
   ],
   "autoFolders": [
     "BotStartAutosL2",
