--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,10 +1,10 @@
 {
-  "robotWidth": 0.9,
-  "robotLength": 0.9,
+  "robotWidth": 0.965,
+  "robotLength": 0.965,
   "holonomicMode": true,
   "pathFolders": [
-    "BotCycle",
-    "BotStart",
+    "LeftCycle",
+    "LeftStart",
     "MidStart",
     "RightCycle",
     "RightStart"
@@ -23,23 +23,23 @@
   "defaultMaxAngVel": 360.0,
   "defaultMaxAngAccel": 540.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 74.088,
-  "robotMOI": 6.883,
+  "robotMass": 48.534,
+  "robotMOI": 7.532679,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.048,
-  "driveGearing": 5.143,
-  "maxDriveSpeed": 5.45,
+  "driveWheelRadius": 0.0381,
+  "driveGearing": 5.5,
+  "maxDriveSpeed": 4.12,
   "driveMotorType": "NEO",
   "driveCurrentLimit": 50.0,
   "wheelCOF": 1.2,
-  "flModuleX": 0.273,
-  "flModuleY": 0.273,
-  "frModuleX": 0.273,
-  "frModuleY": -0.273,
-  "blModuleX": -0.273,
-  "blModuleY": 0.273,
-  "brModuleX": -0.273,
-  "brModuleY": -0.273,
+  "flModuleX": 0.343,
+  "flModuleY": 0.343,
+  "frModuleX": 0.343,
+  "frModuleY": -0.343,
+  "blModuleX": -0.343,
+  "blModuleY": 0.343,
+  "brModuleX": -0.343,
+  "brModuleY": -0.343,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
